fixed mobile nav alignment

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -99,6 +99,7 @@ a {
     /* display: block; */
     display: none;
     text-align: center;
+    padding: 0;
 }
 
 .burger-links li {
